Trabalhando no frontend do chat, e adicionado sexo ao modelo do usuário

--- a/websocket-chat-frontend/src/app/chat-mensagens/chat-mensagens.component.html
+++ b/websocket-chat-frontend/src/app/chat-mensagens/chat-mensagens.component.html
@@ -1,3 +1,101 @@
-<p>
-  chat-mensagens works!
-</p>
+<div class="messages-list">
+  <mat-list [disableRipple]="false">
+    <mat-list-item aria-label="public">
+      <div class="message-icon public"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="private">
+      <div class="message-icon private"></div>
+      <h3 class="message-title" matLine> Adriano enviou para você as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="notification">
+      <div class="message-icon notification"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="self">
+      <div class="message-icon public"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="public">
+      <div class="message-icon public"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="private">
+      <div class="message-icon private"></div>
+      <h3 class="message-title" matLine> Adriano enviou para você as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="notification">
+      <div class="message-icon notification"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="self">
+      <div class="message-icon public"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="public">
+      <div class="message-icon public"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="private">
+      <div class="message-icon private"></div>
+      <h3 class="message-title" matLine> Adriano enviou para você as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="notification">
+      <div class="message-icon notification"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+    <mat-list-item aria-label="self">
+      <div class="message-icon public"></div>
+      <h3 class="message-title" matLine> Adriano enviou para todos as 14:58 </h3>
+      <p matLine>
+        <span> Sujeito </span>
+        <span class="demo-2"> meu conteudo aq uasdsao dsaod jsaodj asod </span>
+      </p>
+    </mat-list-item>
+  </mat-list>
+</div>
+
