--- a/websocket-chat-frontend/src/app/form-enviar-msg/form-enviar-msg.component.html
+++ b/websocket-chat-frontend/src/app/form-enviar-msg/form-enviar-msg.component.html
@@ -1,3 +1,11 @@
-<p>
-  form-enviar-msg works!
-</p>
+<div class="send-message-box">
+  <mat-form-field appearance="fill">
+    <mat-label>Enviar mensagem</mat-label>
+    <input matInput placeholder="minha mensagem...">
+    <mat-icon matSuffix>chat</mat-icon>
+  </mat-form-field>
+  <button color="send" class="send-button" mat-fab>
+    <mat-icon>send</mat-icon>
+  </button>
+</div>
+
