--- a/websocket-chat-frontend/src/app/chat-page/chat-page.component.html
+++ b/websocket-chat-frontend/src/app/chat-page/chat-page.component.html
@@ -1,3 +1,14 @@
-<p>
-  chat-page works!
-</p>
+<div class="chat-page-wrapper">
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Adriano Oliveira</mat-card-title>
+            <mat-card-subtitle>Logado desde às 14:57</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <drp-chat-mensagens></drp-chat-mensagens>
+            <drp-form-enviar-msg></drp-form-enviar-msg>
+        </mat-card-content>
+        <drp-usuarios-lista></drp-usuarios-lista>
+    </mat-card>
+</div>
