--- a/websocket-chat-frontend/src/styles.scss
+++ b/websocket-chat-frontend/src/styles.scss
@@ -4,4 +4,16 @@
 
 body {
   background-color: rgba(0,0,0,.1);
+  margin: 0px;
+  position: relative;
+
+  &:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    left: 0;
+    background-color: #009ddf;
+    height: 150px;
+  }
 }
